--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 4.0)
+cmake_minimum_required(VERSION 3.31)
 project(glfw_project)
 
 set(CMAKE_CXX_STANDARD 20)
@@ -14,7 +14,11 @@ link_directories("${GLFW_ROOT}/lib-vc2022")
 
 add_executable(glfw_project main.cpp)
 
-target_link_libraries(${PROJECT_NAME} glfw3dll opengl32)
+find_package(fmt CONFIG REQUIRED)
+find_package(OpenGL REQUIRED)
+find_package(FreeGLUT CONFIG REQUIRED)
+
+target_link_libraries(${PROJECT_NAME} glfw3dll opengl32 fmt::fmt OpenGL::GL $<IF:$<TARGET_EXISTS:FreeGLUT::freeglut>,FreeGLUT::freeglut,FreeGLUT::freeglut_static>)
 
 add_custom_command(TARGET ${PROJECT_NAME} POST_BUILD
         COMMAND ${CMAKE_COMMAND} -E copy_if_different
